--- a/webui/index.html
+++ b/webui/index.html
@@ -8,12 +8,15 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="/bootstrap/css/bootstrap.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+
+
 </head>
 
 <body>
 	<div id="app" class="h-100"></div>
 
 	<script src="/bootstrap/js/bootstrap.bundle.js"></script>
+	<script src="/bootstrap/js/bootstrap.min.js"></script>
 	<script type="module" src="/src/main.js"></script>
 </body>
 
