--- a/webui/index.html
+++ b/webui/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 
 <head>
-	<title>Example app</title>
+	<title>WasaPhoto!</title>
+
 	<meta charset="UTF-8">
 	<link rel="icon" href="/favicon.ico" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
